--- a/config.json
+++ b/config.json
@@ -18,18 +18,7 @@
 		"/Altes/"
     ],
     "path_list": [
-        "J:/Analysen_Methoden",
-        "J:/Datenmanagement",
-        "J:/InfoDesk",
-        "O:/Auswertungen",
-        "O:/Output",
-        "O:/Projekte",
-        "O:/Publikationen",
-        "P:/Automat",
-        "P:/Hotellerie",
-        "P:/OGD/Daten",
-        "P:/SAS/Fuehrungskennzahlen",
-        "P:/SAS/Siedlungsbericht/PROD"
+		"J:/InfoDesk/_Anfragen"
     ],
     "temp_path": "H:/Daten/Project/Desktop-2020/SampleSEG",
     "write_to_excel": true
